basic footer for Index

--- a/assign1/styles/style.css
+++ b/assign1/styles/style.css
@@ -26,12 +26,35 @@
         /* Main Content */
 
         .Main {
-            margin-top: 90px;
             margin: 50px;
+            
         }
+        /* background image */
         body {
             background-image: url(images/TestStockImage.jpg);
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: 100% 100%;
+        }
+
+        /* Footer */
+        .footer {
+            overflow:hidden;
+            background-color: black;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+
+        .footer a:hover {
+            background: rgb(7, 226, 255);
+            color: black;
+        }
+        .footer a {
+            float: right;
+            display: block;
+            color: #f2f2f2;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
         }
