--- a/assign1/styles/style.css
+++ b/assign1/styles/style.css
@@ -1,204 +1,196 @@
-
-        /* Navbar */
-        .navbar {
-            overflow:hidden;
-            background-color: #333;
-            position: fixed;
-            top: 0;
-            width: 100%;
-        }
-
-        /* navbar links */
-        .navbar a {
-            float: right;
-            display: block;
-            color: #f2f2f2;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-
-        .navbar a:hover {
-            background: rgb(7, 226, 255);
-            color: black;
-        }
-
-        /* Main Content */
-
-        .Main {
-            margin: 50px;
-            
-        }
-        /* background image */
-        body {
-            background-image: url(images/TestStockImage.jpg);
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-size: 100% 100%;
-        }
-
-        /* Footer */
-        .footer {
-            overflow:hidden;
-            background-color: black;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-
-        .footer a:hover {
-            background: rgb(7, 226, 255);
-            color: black;
-        }
-        .footer a {
-            float: right;
-            display: block;
-            color: #f2f2f2;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-        }
-/*VARIABLES*/
- :root{
-    --bg: #f8fafc;
-    --panel-bg: #FFFFFF;
-    --panel-border: #CCCCCC;
-    --panel-title: #343f44;
-    --panel-text: #54666d;
-    --btn: #3eb0ef;
-  }
-  
-  /**
-   * GENERIC STYLES 
-   */
-  body{
-    position: relative;
-    height: 100vh;
-    padding: 0;
-    margin: 0;
-    font-family: sans-serif;
-    font-weight: 600;
-  }
-  
-  /**
-   * TOGGLERS 
-   */
-  #toggleMode{
-    visibility: hidden;
-  }
-  
-  .toggleDark,
-  .toggleLight{
-    cursor: pointer;
-    position: absolute;
-    z-index: 2;
-    top: 20px;
-    left: 20px;
-  }
-  
-  .toggleDark{
-    display: block;
-    color: #222;
-  }
-  
-  .toggleDark:hover{
-    color: blue;
-  }
-  
-  .toggleLight{
-    display: none;
-    color: white;
-  }
-  
-  #toggleMode:checked ~ .toggleDark{
-    display: none;
-  }
-  
-  #toggleMode:checked ~ .toggleLight{
-    display: block;
-  }
-  
-  /**
-   * CONTAINER 
-   */
-  #container{
-    position: absolute;
+/* Navbar */
+.navbar {
+    overflow:hidden;
+    background-color: #333;
+    position: fixed;
     top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: var(--bg);
-    z-index: 1;
-    padding: 50px 20px;
-  }
-  
-  #toggleMode:checked ~ #container{
-    --bg: #020202;
-    --panel-bg: #111413;
-    --panel-border: #1f2322;
-    --panel-title: #8e9294;
-    --panel-text: #505456;
-    --btn: #2962fe;
+    width: 100%;
+}
+/* navbar links */
+.navbar a {
+    float: right;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+.navbar a:hover {
+    background: rgb(7, 226, 255);
+    color: black;
+}
+/* Main Content */
+.Main {
+    margin: 50px;
     
-    background-color: var(--bg);
-  }
-  
-  /*Title*/
-  h1, h2{
-    margin-top: 50px;
-    margin-bottom: 0;
-    color: var(--panel-title);
-  }
+}
+/* background image */
+body {
+    background-image: url(images/TestStockImage.jpg);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+}
+/* Footer */
+.footer {
+    overflow:hidden;
+    background-color: black;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+.footer a:hover {
+    background: rgb(7, 226, 255);
+    color: black;
+}
+.footer a {
+    float: right;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
 
-  /**
-   * PANEL 
-   */
-  .panel{
-    margin-top: 20px;
-  }
-  
-  .panel .content{
-    width: 70%;
-    float: left;
-    padding: 20px;
-    background-color: var(--panel-bg);
-    height: 300px;
-    border-radius: 0 10px 10px 0;
-    border-top: 1px solid var(--panel-border);
-    border-right: 1px solid var(--panel-border);
-    border-bottom: 1px solid var(--panel-border);
-    box-sizing: border-box;
-  }
 
-  .panel .content legend{
-    margin-top: 30px;
-    margin-bottom: 0;
-    color: var(--panel-title);
-  }
+
+/*Dark mode implementation*/
+:root{
+  --bg: #f8fafc;
+  --panel-bg: #FFFFFF;
+  --panel-border: #CCCCCC;
+  --panel-title: #343f44;
+  --panel-text: #54666d;
+  --btn: #3eb0ef;
+}
+
+/**
+ * GENERIC STYLES 
+ */
+body{
+  position: relative;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+  font-family: sans-serif;
+  font-weight: 600;
+}
+
+/**
+ * TOGGLERS 
+ */
+#toggleMode{
+  visibility: hidden;
+}
+
+.toggleDark,
+.toggleLight{
+  cursor: pointer;
+  position: absolute;
+  z-index: 2;
+  top: 20px;
+  left: 20px;
+}
+
+.toggleDark{
+  display: block;
+  color: #222;
+}
+
+.toggleDark:hover{
+  color: blue;
+}
+
+.toggleLight{
+  display: none;
+  color: white;
+}
+
+#toggleMode:checked ~ .toggleDark{
+  display: none;
+}
+
+#toggleMode:checked ~ .toggleLight{
+  display: block;
+}
+
+/**
+ * CONTAINER 
+ */
+#container{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--bg);
+  z-index: 1;
+  padding: 50px 20px;
+}
+
+#toggleMode:checked ~ #container{
+  --bg: #020202;
+  --panel-bg: #111413;
+  --panel-border: #1f2322;
+  --panel-title: #8e9294;
+  --panel-text: #505456;
+  --btn: #2962fe;
   
-  .panel .content label{
-    margin-top: 20px;
-    margin-bottom: 0;
-    color: var(--panel-title);
-  }
-  
-  .panel .content input{
-    margin-top: 10px;
-    font-weight: 300;
-    color: var(--panel-text);
-  }
-  
-  .panel .content input{
-    border: 0;
-    border-radius: 3px;
-    background-color: var(--btn);
-    padding: 10px 20px;
-    color: white;
-    cursor: pointer;
-  }
-  
-  .panel .content input:hover{
-    opacity: 0.7;
-  }
-  }
+  background-color: var(--bg);
+}
+
+/*Title*/
+h1, h2{
+  margin-top: 50px;
+  margin-bottom: 0;
+  color: var(--panel-title);
+}
+/**
+ * PANEL 
+ */
+.panel{
+  margin-top: 20px;
+}
+
+.panel .content{
+  width: 70%;
+  float: left;
+  padding: 20px;
+  background-color: var(--panel-bg);
+  height: 300px;
+  border-radius: 0 10px 10px 0;
+  border-top: 1px solid var(--panel-border);
+  border-right: 1px solid var(--panel-border);
+  border-bottom: 1px solid var(--panel-border);
+  box-sizing: border-box;
+}
+.panel .content legend{
+  margin-top: 30px;
+  margin-bottom: 0;
+  color: var(--panel-title);
+}
+
+.panel .content label{
+  margin-top: 20px;
+  margin-bottom: 0;
+  color: var(--panel-title);
+}
+
+.panel .content input{
+  margin-top: 10px;
+  font-weight: 300;
+  color: var(--panel-text);
+}
+
+.panel .content input{
+  border: 0;
+  border-radius: 3px;
+  background-color: var(--btn);
+  padding: 10px 20px;
+  color: white;
+  cursor: pointer;
+}
+
+.panel .content input:hover{
+  opacity: 0.7;
+}
