--- a/assign1/styles/style.css
+++ b/assign1/styles/style.css
@@ -1,3 +1,10 @@
+/*Reset CSS*/
+*{
+  padding: 0;
+  margin: 0;
+}
+
+/*For all pages*/
 /* Navbar */
 nav {
     z-index: 9999;
@@ -8,18 +15,17 @@ nav {
     width: 100%;
 }
 /* navbar links */
-nav ul li {
+nav ul li, nav a{
     list-style-type: none;
     float: right;
     display: block;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
-    text-decoration: none;
 }
+
 nav a:hover {
-    background: rgb(7, 226, 255);
-    color: black;
+    color: yellow;
 }
 /* Main Content */
 .main {
@@ -36,9 +42,8 @@ body {
 }
 /* Footer */
 footer {
-    z-index: 9999;
-    overflow:hidden;
     background-color: #333;
+    position: absolute;
     bottom: 0;
     width: 100%;
 }
@@ -54,9 +59,18 @@ footer a {
     text-decoration: none;
 }
 
-*{
-  padding: 0;
-  margin: 0;
+
+
+
+/*For index.html*/
+h1 {
+  padding-top: 200px;
+  padding-left: 200px;
+  font-size: 5em;
+}
+
+p {
+  padding-left: 200px;
 }
 
 
@@ -71,10 +85,9 @@ footer a {
 
 
 
-
-
-
+/*For quiz.html*/
 /*Dark mode implementation*/
+
 /*By default, light mode is picked ("Dark mode" label is displayed and "Light mode" label is hidden)*/
 #toggleDark{
   display: inline;
