[A] - addition of header, dark mode button
Footer is still amiss

--- a/assign1/styles/style.css
+++ b/assign1/styles/style.css
@@ -4,6 +4,11 @@
   margin: 0;
 }
 
+/*remove underline from anchors*/
+*:link{
+  text-decoration: none;
+}
+
 /*For all pages*/
 /* Navbar */
 nav {
@@ -13,6 +18,7 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
+
 }
 /* navbar links */
 nav ul li, nav a{
@@ -22,6 +28,21 @@ nav ul li, nav a{
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
+
+}
+
+/*Select Dark Mode button*/
+nav ul li label{
+    list-style-type: none;
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+}
+
+nav ul li#toggler{
+  float: left;
 }
 
 nav a:hover {
@@ -43,8 +64,8 @@ body {
 /* Footer */
 footer {
     background-color: #333;
-    position: absolute;
-    bottom: 0;
+    /* position: relative;
+    bottom: 0; */
     width: 100%;
 }
 footer a:hover {
