--- a/assign1/styles/style.css
+++ b/assign1/styles/style.css
@@ -86,12 +86,14 @@ footer a {
 /*For index.html*/
 h1 {
   padding-top: 200px;
-  padding-left: 200px;
+  padding-left: 150px;
+  padding-right: 175px;
   font-size: 5em;
 }
 
 p {
-  padding-left: 200px;
+  padding-left: 150px;
+  padding-right: 175px;
 }
 
 
