--- a/assign1/styles/style.css
+++ b/assign1/styles/style.css
@@ -62,11 +62,6 @@ body {
     overflow-y: scroll;
 }
 
-main{
-  width: 100%;
-  flex: 1;
-}
-
 /* Footer */
 footer{
     background-color: #333;
@@ -100,6 +95,10 @@ p {
   padding-left: 200px;
 }
 
+#bg-container {
+  margin-bottom: 46.6vh;
+}
+
 /*Dark mode implementation*/
 #bg-container h1{
   margin-top: 20px;
@@ -127,6 +126,19 @@ p {
 
 
 /*For quiz.html*/
+
+
+/*Parallax scrolling for images*/
+/*sets scroll properties for whole page*/
+.wrapper{
+  height: 100vh;
+  overflow-x: hidden; /*Disable horizontal scrollbar when scale image*/
+  overflow-y: auto;
+  perspective: 2px;
+}
+
+
+
 /*Dark mode implementation*/
 
 /*By default, light mode is picked ("Dark mode" label is displayed and "Light mode" label is hidden)*/
@@ -165,14 +177,11 @@ p {
 /*CONTAINER*/
 #container{
   background-color: var(--bg);
-  z-index: 1;
   height: auto;
-  width: auto;
+  width: 100%;
 }
 
 form{
-  z-index: 2;
-  padding: 50px 20px;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -210,14 +219,15 @@ form .bubble:nth-child(2n) {
 
 /*BUBBLE*/
 .bubble{
-  z-index: 3;
   flex-grow: 0;
+  margin-left: 3%;
+  margin-right: 3%;
+  margin-bottom: 2%;
   width: 400px;
   border-radius: 20px;
   border: 5px solid purple;
   display: inline-block;
   height: auto;
-  margin: 10px;
   justify-content: left;
   background-color: var(--bubble-bg);
 }
